# CPD_PAPI

./: .gitignore  sources
enunciado/: .~lock.ReadMeFirst2_ReadAssig1112.rtf#  ReadMeFirst2_ReadAssig1112.rtf
gnuplot/: Makefile  main.tex  roofline.eps  roofline.gnuplot  roofline_x4.gnuplot
hardware_profiling/: laptop  lshw.outpub
papi/: papi_selected_events
papi/papi-4.2.0/src/components/mx/: Rules.mx  configure.in  linux-mx.c  linux-mx.h
papi/papi-4.2.0/src/components/net/: Rules.net  configure.in  linux-net.c  linux-net.h
report/: .fuse_hidden0000018e00000001  .fuse_hidden0000019000000002  .fuse_hidden0000019600000003  .fuse_hidden000001a400000004  .fuse_hidden000001a600000005  .fuse_hidden000001b500000006  .fuse_hidden000001b900000007  .fuse_hidden000001bb00000008  .fuse_hidden000001bf0000000a  .fuse_hidden000001ea00000001  .fuse_hidden0000020500000012  .fuse_hidden0000020700000010  .fuse_hidden0000020900000011  .fuse_hidden000002100000000c  .fuse_hidden000002160000000e  .fuse_hidden000002180000000f  .fuse_hidden0000022200000011  .fuse_hidden0000022400000012  .fuse_hidden0000022600000013  .fuse_hidden0000022800000014  .fuse_hidden0000023000000016  .fuse_hidden0000023400000017  .fuse_hidden0000023600000018  .fuse_hidden0000023800000019  .fuse_hidden000002420000001b  .fuse_hidden000002470000001c  .fuse_hidden000002490000001d  .fuse_hidden0000024b0000001e  .fuse_hidden0000024d0000001f  .fuse_hidden0000028500000002  .fuse_hidden0000028700000020  .fuse_hidden0000028b00000003  .fuse_hidden0000029700000021  .fuse_hidden0000031300000005  .main.tex.swj  (+16 more)
src/: asm.s  (+12 more)
(+414 files in other folders)
