# Process this file with autoconf to produce a configure script.
# File: components/net/configure.in
# CVS: $Id: configure.in,v 1.1 2010/04/29 15:45:51 bsheely Exp $

AC_INIT
AC_PATH_PROG(NETPATH, ifconfig)
if test "$NETPATH" = ""; then
  AC_MSG_ERROR([Component requires the path to ifconfig])
fi
AC_SUBST(NETPATH)
AC_CONFIG_FILES([Makefile.net])
AC_OUTPUT